--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">宇恒印刷</string>
+    <string name="app_name">裕恒印刷</string>
     <string name="loading">加载中......</string>
     <string name="requstPerminssions">权限申请</string>
     <string name="notmore">没有更多了</string>
